[gd_scene load_steps=5 format=3 uid="uid://diyvsixhr76ei"]

[ext_resource type="Script" path="res://script/bubble.gd" id="1_1nes4"]
[ext_resource type="PackedScene" uid="uid://brsoe12l60irp" path="res://assets/bub.blend" id="2_mcjqt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ovxnm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7r54j"]
radius = 1.0

[node name="bubble" type="RigidBody3D"]
collision_layer = 2
collision_mask = 7
gravity_scale = 0.2
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_1nes4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ovxnm")

[node name="bub" parent="." instance=ExtResource("2_mcjqt")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 6
priority = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_7r54j")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
